--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <div class="container">
   <h1 class="jumbotron">{{title}}</h1>
   <router-outlet></router-outlet>
+  <br>
+  <hr>
+  <br>
+  <a class="text-muted" routerLink="add-project">Add project</a>
 </div>
