add delete option in project details component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,5 @@
   <hr>
   <br>
   <a class="text-muted" routerLink="add-project">Add project</a>
+  <a class="text-muted" routerLink="">Home page</a>
 </div>
