change routerLink on edit button to go back to project detail page

--- a/src/app/edit-project/edit-project.component.html
+++ b/src/app/edit-project/edit-project.component.html
@@ -25,5 +25,5 @@
 <input [(ngModel)]="projectToDisplay.donorRewards">
 <br>
 
-<button (click)="beginUpdatingProject(projectToDisplay)" routerLink=''>Update</button>
+<button (click)="beginUpdatingProject(projectToDisplay)" routerLink='../../{{projectId}}'>Update</button>
 <br>
