add option to make donation to a specific project

--- a/src/app/add-project/add-project.component.html
+++ b/src/app/add-project/add-project.component.html
@@ -36,7 +36,7 @@
         <br>
         <input #newDonorRewards>
       </div>
-      <button (click)="submitForm(newName.value, newManager.value, newDescription.value, newFundingGoal.value, newFundDirective.value, newDonorRewards.value); newName.value=''; newManager.value=''; newDescription.value=''; newFundingGoal.value=''; newFundDirective.value=''; newDonorRewards.value=''">Add</button>
+      <button (click)="submitForm(newName.value, newManager.value, newDescription.value, newFundingGoal.value, newFundDirective.value, newDonorRewards.value); newName.value=''; newManager.value=''; newDescription.value=''; newFundingGoal.value=''; newFundDirective.value=''; newDonorRewards.value=''" routerLink=''>Add</button>
     </div>
   </div>
 </div>
