--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -6,9 +6,16 @@
   <li>Funding Goal: ${{(projectToDisplay | async)?.fundingGoal}}</li>
   <li>These funds will go towards: {{(projectToDisplay | async)?.fundDirective}}</li>
   <li>All donors will receive: {{(projectToDisplay | async)?.donorRewards}}</li>
-  <li>Funds received: {{(projectToDisplay | async)?.fundsReceived}}</li>
+  <li>Funds received: ${{(projectToDisplay | async)?.fundsRaised}}</li>
 </ul>
 
-<a routerLink="edit-project">Edit Project</a>
 
+<label>Make Donation:</label>
+<input #donationAmount>
+<button (click)="makeDonation(donationAmount.value); donationAmount.value=''">Donate!</button>
+
+<br>
+<br>
+
+<a routerLink="edit-project">Edit Project</a>
 <button (click)="beginDeletingProject(projectToDisplay)" routerLink="">Delete</button>
